2010-11-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_desc.c (gnukConfigDescriptor): Change dwFeatures.

	* src/usb-icc.c (icc_send_params): Always return fixed result.
	(icc_handle_data): Support ICC_GET_PARAMS.

2010-11-10  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_desc.c (gnukConfigDescriptor): Fix bmAttributes.

2010-11-09  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.4.

	* src/usb_desc.c (gnukStringSerial): Updated.

	* ChibiOS_2.0.2/os/hal/platforms/STM32/pal_lld.h (PALConfig):
	STBee Mini uses STM32F103CBT6 which expose no GPIO E port.
	* ChibiOS_2.0.2/os/hal/platforms/STM32/pal_lld.c (_pal_lld_init):
	Likewise.

2010-11-08  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/dump_mem.py: New tool.

	Implement GC for data pool in flash memory.
	* src/openpgp-do.c (gpg_write_digital_signature_counter): New.
	(gpg_increment_digital_signature_counter): Fix for GC.
	(gpg_data_scan): Rename from gpg_do_table_init.
	(gpg_data_copy): New function for copying GC.
	* src/main.c (main): Call gpg_data_scan with the address which
	flash_init returns.
	* src/flash.c (flash_erase_page): New function.
	(FLASH_DATA_POOL_SIZE): data_pool is 2KiB now.
	(flash_data): Put a header (GC generation).
	(flash_init): Implement choosing a data pool page.
	(flash_data_pool): Removed.
	(flash_copying_gc): New function.
	(flash_data_pool_allocate): Call flash_copying_gc when full.
	(flash_do_write_internal, flash_put_data_internal)
	(flash_bool_write_internal, flash_cnt123_write_internal): New
	* src/gnuk.ld.in (gnuk_flash): data_pool is 2KiB now.

	Bug fixes.
	* src/openpgp.c (cmd_change_password, cmd_reset_user_password):
	Write to APDU correctly.
	* src/flash.c (flash_warning): Make it public.
	* src/openpgp-do.c (do_hist_bytes, do_fp_all, do_cafp_all)
	(do_kgtime_all, do_ds_count): Fix return value.
	(rw_pw_status): Correctly return value.
	(proc_resetting_code): Change func proto. to return success/failure.
	(proc_key_import): Ditto.
	(gpg_do_put_data): Handle return values.